Update PPP header

--- a/docs/team/gao327.md
+++ b/docs/team/gao327.md
@@ -1,7 +1,4 @@
----
-layout: page
-title: Gao Yening's Project Portfolio Page
----
+# Gao Yening - Project Portfolio Page
 
 ### Project: uNivUSaver
 
