Reformat the PPP

--- a/docs/team/gao327.md
+++ b/docs/team/gao327.md
@@ -1,11 +1,14 @@
 # Gao Yening - Project Portfolio Page
 
-### Project: uNivUSaver
+## Project Overview: uNivUSaver
 
-uNivUSaver is a CLI-based software that helps students to develop a better habit of managing money, which will help you avoid using up your money before the end of month. It is written in Java.
+uNivUSaver is a CLI-based software designed to help students develop better money management habits, aiming to prevent users from running out of money before the end of the month. It is written in Java.
 
-Given below are my contributions to the project.
+### Summary of Contributions
+#### Code contributed
+* **Code contributed**: [RepoSense link](https://nus-cs2113-ay2425s1.github.io/tp-dashboard/?search=Gao%20Yening&sort=groupTitle&sortWithin=title&timeframe=commit&mergegroup=&groupSelect=groupByRepos&breakdown=true&checkedFileTypes=docs~functional-code~test-code~other&since=2024-09-20&tabOpen=true&tabType=authorship&tabAuthor=Gao327&tabRepo=AY2425S1-CS2113-W10-4%2Ftp%5Bmaster%5D&authorshipIsMergeGroup=false&authorshipFileTypes=docs~functional-code~test-code~other&authorshipIsBinaryFileTypeChecked=false&authorshipIsIgnoredFilesChecked=false)
 
+#### Enhancements implemented
 * **New Feature**: Added abilities to search for transactions in TransactionList via multiple ways
     * What it does: creates a arrayList to store all the transactions made by the user. This class contains various search methods, allowing user to search for transactions made between a time period, by keyword(s), and by category.
 
@@ -13,17 +16,18 @@ Given below are my contributions to the project.
     * What it does: it allows users to serialise the current transactionList to JSON and save locally when there's an update to the TransactionList. It also deserialise the JSON back and load the TransactionList when the programme initiates.
     * Credits: The implementation is the external library Gson by Google. Also, Gson by default does not support polymorphism, hence a helper class RuntimeTypeAdapterFactory is created. This implementation is based on https://github.com/google/gson/blob/main/extras/src/main/java/com/google/gson/typeadapters/RuntimeTypeAdapterFactory.java.
 
-* **Code contributed**: [RepoSense link](https://nus-cs2113-ay2425s1.github.io/tp-dashboard/?search=Gao%20Yening&sort=groupTitle&sortWithin=title&timeframe=commit&mergegroup=&groupSelect=groupByRepos&breakdown=true&checkedFileTypes=docs~functional-code~test-code~other&since=2024-09-20&tabOpen=true&tabType=authorship&tabAuthor=Gao327&tabRepo=AY2425S1-CS2113-W10-4%2Ftp%5Bmaster%5D&authorshipIsMergeGroup=false&authorshipFileTypes=docs~functional-code~test-code~other&authorshipIsBinaryFileTypeChecked=false&authorshipIsIgnoredFilesChecked=false)
-
 * **Enhancements to existing features**:
     * Change the date and time attribute to String dateTimeString for easier serialisation.
 
-* **Documentation**:
-    * User Guide:
-        * Added documentation for the features in v1.0
-    * Developer Guide:
-        * Added implementation details of the `TransactionList` class.
+#### Documentation
+* **User Guide**:
+    * Added documentation for the features in v1.0
+* **Developer Guide**:
+    * Added implementation details of the `TransactionList` class.
 
-* **Community**
+#### Contributions to Team-based Tasks
 
-* **Tools**
+#### Community
+* **Review/Mentoring Contributions**:
+
+* **Contributions Beyond the Project Team**:
