--- a/docs/team/kq2003.md
+++ b/docs/team/kq2003.md
@@ -26,6 +26,7 @@ Here are my contributions to the team for this semester.
 - Added class diagram for CategoryManager: #89
 - Added class diagram for TrackerData: #89
 - Added class diagram for BudgetManager: #89
+- Added sequence diagrams for Storage and Format methods: #129
 
 #### Contributions to team-based tasks
 - set up the github repo
