Fix spelling in PPP
Changes made:
* Fixed spelling from "enum" to Enumerations

This will help improve readability and clarity for users.

--- a/docs/team/ncf3535.md
+++ b/docs/team/ncf3535.md
@@ -39,7 +39,7 @@ Given below are my contributions to the project.
 - **New Feature**: State Management with `State` and `StateType` Classes
     - **What it does**: Manages the system’s current operational state (e.g., `MAIN_STATE` or `TASK_STATE`), enabling or restricting certain commands based on active state.
     - **Justification**: Allows for state-dependent command execution, improving usability and system organization.
-- **New Feature**: `DateFormat` Class and `DateFormats`,`TimeFormats` and `DateTimeformats` enums 
+- **New Feature**: `DateFormat` Class and `DateFormats`,`TimeFormats` and `DateTimeformats` Enumerations 
     - **What it does**: A Date Formatting and Parsing System that standardizes date and time inputs across MediTask, allowing nurses to input dates in various formats or use relative terms like “today” and “tomorrow.”
     - **Justification**: Ensures consistency in date handling, reducing errors in task scheduling and improving nurse workflow.
     - **Highlights**: Accounts for a very wide range of date entries, including relative terms (“today”, “tomorrow”), weekdays and weekends (e.g., “monday”, “sunday”), and combinations of date-only, time-only, or full date-time entries. The system also includes error handling for invalid formats and warnings for past dates, making date-time input robust and user-friendly. It enhances the Deadline functionality, which previously accepted strings, making it more useful and allow for it to be used for future iterations.
