Remove picture, edit ppp

--- a/docs/team/ltk-1606.md
+++ b/docs/team/ltk-1606.md
@@ -42,6 +42,7 @@ EventManagerCLI is a desktop CLI application meant for managing small-scale even
 
 * **Team-Based Tasks**:
   * General Code Enhancements: Update all functional code and tests cases etc after implementation of new priority attribute to event classes. (PR [#110](https://github.com/AY2425S1-CS2113-W13-3/tp/pull/110))
+  * Bug Fixing (PR [#172](https://github.com/AY2425S1-CS2113-W13-3/tp/pull/172), [#234](https://github.com/AY2425S1-CS2113-W13-3/tp/pull/234), [#241](https://github.com/AY2425S1-CS2113-W13-3/tp/pull/241), [#247](https://github.com/AY2425S1-CS2113-W13-3/tp/pull/247))
 
 
 * **Code contributed**: [RepoSense link](https://nus-cs2113-ay2425s1.github.io/tp-dashboard/?search=LTK&sort=groupTitle&sortWithin=title&timeframe=commit&mergegroup=&groupSelect=groupByRepos&breakdown=true&checkedFileTypes=docs~functional-code~test-code~other&since=2024-09-20&tabOpen=true&tabType=authorship&tabAuthor=LTK-1606&tabRepo=AY2425S1-CS2113-W13-3%2Ftp%5Bmaster%5D&authorshipIsMergeGroup=false&authorshipFileTypes=docs~functional-code~test-code&authorshipIsBinaryFileTypeChecked=false&authorshipIsIgnoredFilesChecked=false)
@@ -60,7 +61,7 @@ EventManagerCLI is a desktop CLI application meant for managing small-scale even
  
      
 * **Community**
-  * PRs reviewed (with non-trivial review comments): [#156](https://github.com/AY2425S1-CS2113-W13-3/tp/pull/156), [#158](https://github.com/AY2425S1-CS2113-W13-3/tp/pull/158)
+  * PRs reviewed (with non-trivial review comments): [#156](https://github.com/AY2425S1-CS2113-W13-3/tp/pull/156), [#158](https://github.com/AY2425S1-CS2113-W13-3/tp/pull/158), [#249](https://github.com/AY2425S1-CS2113-W13-3/tp/pull/249), [#250](https://github.com/AY2425S1-CS2113-W13-3/tp/pull/250)
   * Helped teammate update PR to resolve merge conflicts and pass CI checks (PR [#118](https://github.com/AY2425S1-CS2113-W13-3/tp/pull/118), [#127](https://github.com/AY2425S1-CS2113-W13-3/tp/pull/127))
 
 <div style="page-break-after: always;"></div>
