Remove unnecessary spaces
Changes made:
* Remove unnecessary spaces

This will help improve clarity and consistency of the PPP.

--- a/docs/team/ncf3535.md
+++ b/docs/team/ncf3535.md
@@ -63,7 +63,7 @@ Given below are my contributions to the project.
     - Updated v2.0 user stories to cover task completion progress and deadlines ([PR #102](https://github.com/AY2425S1-CS2113-T11-1/tp/pull/102)).
 - **Community and Contributions**:
   - PRs Reviewed (with non-trivial comments): ([PR #124](https://github.com/AY2425S1-CS2113-T11-1/tp/pull/124),[PR #95](https://github.com/AY2425S1-CS2113-T11-1/tp/pull/95), [PR #57](https://github.com/AY2425S1-CS2113-T11-1/tp/pull/57), [PR #56](https://github.com/AY2425S1-CS2113-T11-1/tp/pull/56)).
-  - Help sort and assign issues to each member after PE-D user testing .
-  - Provided detailed feedback on logic improvements and error handling, ensuring robust and maintainable code.
+  - Help sort and assign issues to each member after PE-D user testing so everyone is clear of the issues needed to be resolved.
   - Contributed to design discussions on project structure and best practices.
+  - Provided detailed feedback on logic improvements and error handling, ensuring robust and maintainable code.
 
