Fix Bolding issues
Changes made:
* Ensure bold is consistent throughout the PPP

This will help improve clarity and consistency of the PP

--- a/docs/team/ncf3535.md
+++ b/docs/team/ncf3535.md
@@ -48,7 +48,7 @@ Given below are my contributions to the project.
 - **Project management**:
   - Managed release `v1.0` (1 release) on GitHub
   - Assisted in the release of Developer guide and User Guide for `v2.0` (1 release) on GitHub
-- Enhancements to existing features:
+- **Enhancements to existing features**:
     - Updated the `Parser` to handle dates using `DateTime` instead of raw strings. This ensures consistent date formatting, improves validation, and reduces redundancy across date-dependent commands.
 - **Documentation**:
   - **User Guide**:
