updated uml diagrams for add expense, add category, view  budget, and set budget limit (not sure about request here, but will look into it)

--- a/docs/team/kq2003.md
+++ b/docs/team/kq2003.md
@@ -29,7 +29,7 @@ Here are my contributions to the team for this semester.
 - Added sequence diagrams for Storage and Format methods: #129
 
 #### Contributions to team-based tasks
-- set up the github repo
+- set up the gitHub repo
 - maintain the issue tracker
 - necessary code updates
 - set up team meetings, cancel out confusions
