--- a/docs/team/kq2003.md
+++ b/docs/team/kq2003.md
@@ -17,6 +17,7 @@ Here are my contributions to the team for this semester.
 
 - Version 2.0:
   - split up the previously long class ExpenseTracker; created classes BudgetManager, CategoryManager, ExpenseManager, TrackerData: pull request #75
+  - Refactor the affected sequence diagrams
 
 #### Contributions to the UG
 - Added documentation for menu: #73
@@ -26,7 +27,7 @@ Here are my contributions to the team for this semester.
 - Added class diagram for CategoryManager: #89
 - Added class diagram for TrackerData: #89
 - Added class diagram for BudgetManager: #89
-- Added sequence diagrams for Storage and Format methods: #129
+- Added sequence diagrams for Storage, Format, and affected methods from V1.0: #129
 
 #### Contributions to team-based tasks
 - set up the gitHub repo
