updated PPP kai

--- a/docs/team/kq2003.md
+++ b/docs/team/kq2003.md
@@ -17,7 +17,8 @@ Here are my contributions to the team for this semester.
 
 - Version 2.0:
   - split up the previously long class ExpenseTracker; created classes BudgetManager, CategoryManager, ExpenseManager, TrackerData: pull request #75
-  - Refactor the affected sequence diagrams
+  - Refactor the affected sequence diagrams from implementation from V2.O.
+  - added javadoc comments for most codes
 
 #### Contributions to the UG
 - Added documentation for menu: #73
